# azure-speech

./: README.md  pyproject.toml  speech_recognition.py  text2speech.py
